--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,164 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-calendar {
+	width: 350;
+	border-radius: 0.375rem;
+	padding: 0.5rem;
+	max-width: 100%;
+	background: white;
+	border: 1px solid;
+	border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.react-calendar--doubleView {
+	width: 700px;
+}
+
+.react-calendar--doubleView .react-calendar__viewContainer {
+	display: flex;
+	margin: -0.5em;
+}
+
+.react-calendar--doubleView .react-calendar__viewContainer > * {
+	width: 50%;
+	margin: 0.5em;
+}
+
+.react-calendar,
+.react-calendar *,
+.react-calendar *:before,
+.react-calendar *:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.react-calendar button {
+	margin: 0;
+	border: 0;
+	outline: none;
+}
+
+.react-calendar button:enabled:hover {
+	cursor: pointer;
+}
+
+.react-calendar__navigation {
+	display: flex;
+	height: 44px;
+	margin-bottom: 1em;
+}
+
+.react-calendar__navigation button {
+	min-width: 44px;
+	background: none;
+}
+
+.react-calendar__navigation button:disabled {
+	background-color: #f0f0f0;
+}
+
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+	background-color: #e6e6e6;
+}
+
+.react-calendar__month-view__weekdays {
+	text-align: center;
+	text-transform: uppercase;
+	font: inherit;
+	font-size: 0.75em;
+	font-weight: bold;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+	padding: 0.5em;
+}
+
+.react-calendar__month-view__weekNumbers .react-calendar__tile {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font: inherit;
+	font-size: 0.75em;
+	font-weight: bold;
+}
+
+.react-calendar__month-view__days__day--weekend {
+	color: #d10000;
+}
+
+.react-calendar__month-view__days__day--neighboringMonth {
+	color: #757575;
+}
+
+.react-calendar__year-view .react-calendar__tile,
+.react-calendar__decade-view .react-calendar__tile,
+.react-calendar__century-view .react-calendar__tile {
+	padding: 2em 0.5em;
+}
+
+.react-calendar__tile {
+	max-width: 100%;
+	padding: 10px 6.6667px;
+	background: none;
+	text-align: center;
+	line-height: 16px;
+	font: inherit;
+	font-size: 0.833em;
+}
+
+.react-calendar__tile:disabled {
+	background-color: #f0f0f0;
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+	background-color: #e6e6e6;
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile--now {
+	--tw-bg-opacity: 1;
+	background: rgb(245 158 11 / var(--tw-bg-opacity));
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+	--tw-bg-opacity: 1;
+	background: rgb(245 158 11 / var(--tw-bg-opacity));
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile--hasActive {
+	background: #76baff;
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__tile--hasActive:enabled:focus {
+	background: #a9d4ff;
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile--active {
+	--tw-bg-opacity: 1;
+	background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+	color: white;
+	border-radius: 0.375rem;
+}
+
+.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile--active:enabled:focus {
+	background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+	border-radius: 0.375rem;
+}
+
+.react-calendar--selectRange .react-calendar__tile--hover {
+	background-color: #e6e6e6;
+	border-radius: 0.375rem;
+}
