--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,7 @@
 	padding: 0.5rem;
 	max-width: 100%;
 	background: white;
-	border: 1px solid;
-	border-color: rgb(229 231 235 / var(--tw-border-opacity));
+	border: 1px solid rgb(229 231 235 / 1);
 }
 
 .react-calendar--doubleView {
@@ -62,7 +61,9 @@
 
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
-	background-color: #e6e6e6;
+	background-color: rgb(99 102 241 / 1);
+	color: white;
+	border-radius: 0.2rem;
 }
 
 .react-calendar__month-view__weekdays {
@@ -123,38 +124,41 @@
 
 .react-calendar__tile--now {
 	--tw-bg-opacity: 1;
-	background: rgb(245 158 11 / var(--tw-bg-opacity));
+	background: rgb(245 158 11 / 1);
+	color: white;
 	border-radius: 0.375rem;
 }
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
 	--tw-bg-opacity: 1;
-	background: rgb(245 158 11 / var(--tw-bg-opacity));
+	background: rgb(245 158 11 / 1);
+	color: white;
 	border-radius: 0.375rem;
 }
 
 .react-calendar__tile--hasActive {
-	background: #76baff;
-	border-radius: 0.375rem;
+	background-color: rgb(99 102 241 / 1);
+	color: white;
+	border-radius: 0.2rem;
 }
 
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
-	background: #a9d4ff;
-	border-radius: 0.375rem;
+	background-color: rgb(79 70 229 / 1);
+	color: white;
+	border-radius: 0.2rem;
 }
 
 .react-calendar__tile--active {
-	--tw-bg-opacity: 1;
-	background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+	background-color: rgb(99 102 241 / 1);
 	color: white;
 	border-radius: 0.375rem;
 }
 
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-	background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+	background-color: rgb(79 70 229 / 1);
 	border-radius: 0.375rem;
 }
 
